# STM32H743IITx-RS

./: .gitignore  Cargo.toml  build.rs  memory.x  openocd.cfg  rust-toolchain.toml
src/: main.rs
