[package]
authors = ["shuimuliang <shuimuliang@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32h743ii-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

# log
rtt-target = "0.4.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
log = "0.4.20"

stm32h7xx-hal = { version = "0.15.1", features = ["stm32h743", "rt"]}
freertos-rust = "*"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

[build-dependencies]
freertos-cargo-build = "*"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32h743ii-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
